crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: expected square brackets
  --> tests/constraints/invalid_seeds_syntax.fail.rs:19:17
   |
19 |         seeds = &[&args.admin],
   |                 ^
